--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -3,7 +3,7 @@
 <% if @article.errors.any? %>
 <div id="error_explannation">
   <h2>
-    <%= pluralize(@article.errors.conut, "error") %> prohibited this article from being saved:
+    <%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
   </h2>
   <ul>
     <%= @article.errors.full_messages.each do |msg| %>
