--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,19 +13,8 @@
 
 
 <h2>Add a comment:</h2>
-<%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
-<p>
-  <%= form.label :commenter %><br>
-  <%= form.text_field :commenter %>
-</p>
-<p>
-  <%= form.label :body %><br>
-  <%= form.text_area :body %>
-</p>
-<p>
-  <%= form.submit %>
-</p>
-<% end %>
+<%= render "comments/form" %>
+
 
 <%= link_to 'Edit Article', edit_article_path(@article) %>
 <%= link_to 'Back to Articles', articles_path %>
